# neuralbroker

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  config.yaml  config.yaml.example  docker-compose.yml  llmfit_output.json  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
docs/integrations/: amp.md  augment.md  claude-code.md  cline.md  codebuddy.md  codex.md  cortex-code.md  cursor.md  deep-agents.md  firebender.md  gemini-cli.md  github-copilot.md  ibm-bob.md  kilo-code.md  kimi-code.md  kiro-cli.md  kode.md  openclaw.md  opencode.md  qwen-code.md  trae.md  warp.md  windsurf.md
grafana/dashboards/: neuralbroker.json
grafana/provisioning/dashboards/: dashboard.yml
scratch/: convert_models.py  convert_models_all.py  generated.py  injector.py  injector_gpu.py  merge_models.py  merged.py  models_output.txt
src/neuralbrok/: __init__.py  adapter.py  auth_discovery.py  autoconfig.py  cli.py  config.py  detect.py  hardware.py  hardware_scorer.py  llmfit_scorer.py  main.py  mcp_server.py  metrics.py  models.py  neuralfit_tui.py  ollama_catalog.py  orchestrator.py  provider_manager.py  quantization.py  router.py  selector.py  setup.py  sync.py  telemetry.py  types.py
src/neuralbrok/agents/: __init__.py  builtin.py  custom.py  loader.py
src/neuralbrok/dashboard/: app.js  index.css  index.html
src/neuralbrok/federation/: crypto.py  router.py
tests/: test_adapter.py  test_config.py  test_detect.py  test_leads.py  test_policy.py  test_providers.py  test_router.py  test_telemetry.py  test_types.py
(+43 files in other folders)
