[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralbrok"
version = "0.5.0"
description = "VRAM-aware LLM routing daemon — local-first, OpenAI-compatible"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "routing", "ollama", "vram", "local-ai", "openai-compatible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.20.0",
    "resend>=0.7.0",
    "redis>=5.0.0",
    "nvidia-ml-py>=12.0.0",
    "boto3>=1.34.0",
    "google-cloud-aiplatform>=1.50.0",
    "psutil>=6.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
neuralbrok = "neuralbrok.cli:_cli_entry"

[project.urls]
Homepage = "https://neuralbroker.space"
Repository = "https://github.com/khan-sha/neuralbroker"
Documentation = "https://github.com/khan-sha/neuralbroker#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/neuralbrok"]
